--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,9 @@ requires = ["uv_build>=0.8.2,<0.9.0"]
 build-backend = "uv_build"
 
 [project]
-name = "python-template"
+name = "dbt-toolbox"
 version = "0.0.0"
-description = ""
+description = "Toolbox to facilitate dbt work."
 authors = [{name = "billwallis"}]
 readme = "README.md"
 requires-python = ">=3.13"
@@ -26,14 +26,8 @@ test = [
 
 
 [tool.uv]
-required-version = ">=0.8,<1.0"
+required-version = ">=0.9,<1.0"
 default-groups = "all"
-#package = false
-
-#[tool.uv.build-backend]
-#module-name = "src"
-#module-root = ""
-#namespace = true
 
 
 [tool.poe]
@@ -49,31 +43,18 @@ update.shell = """
     pre-commit autoupdate
     pre-commit install --install-hooks
 """
-test = "uv run pytest -v"
-
-[tool.poe.tasks.lint]
-control.expr = "sys.platform"
-
-[[tool.poe.tasks.lint.switch]]
-case = "win32"
-shell = """
-    echo '=== pre-commit checks ==='
-    SKIP=identity pre-commit run --all-files --hook-stage pre-commit
-    echo '=== pre-push checks ==='
-    SKIP=identity pre-commit run --all-files --hook-stage pre-push
-"""
-
-[[tool.poe.tasks.lint.switch]]
-shell = """
+lint.shell = """
     echo '\\033[0;34mpre-commit checks\\033[0m'
     SKIP=identity pre-commit run --all-files --hook-stage pre-commit
     echo '\\033[0;34mpre-push checks\\033[0m'
     SKIP=identity pre-commit run --all-files --hook-stage pre-push
 """
+test = "uv run pytest -v"
 
 
 [tool.pytest.ini_options]
-addopts = "--cov=src --cov-fail-under=80"
+#addopts = "--cov=src --cov-fail-under=80"
+addopts = "--cov=src"
 testpaths = ["tests"]
 
 
